@@ -2,10 +2,10 @@
 
 $EM_CONF[$_EXTKEY] = array(
     'title' => 'Frontend TCE',
-    'description' => 'It brings the deprecated TYPO3 4.x class tslib_feTCE and the processScript FEData setup with new features partly back into TYPO3 8.x. This is needed by tt_board and tt_guest. Form MAIL and form wizards require the extension compatibility6.',
+    'description' => 'It brings the deprecated TYPO3 4.x class tslib_feTCE and the processScript FEData setup with new features partly back into TYPO3 8.x. This is needed by tt_board and tt_guest. Only form MAIL and form wizards additionally require the extension compatibility6.',
     'category' => 'plugin',
     'shy' => 0,
-    'version' => '0.4.0',
+    'version' => '0.4.1',
     'dependencies' => '',
     'conflicts' => '',
     'priority' => '',
@@ -26,7 +26,7 @@ $EM_CONF[$_EXTKEY] = array(
         'depends' => array(
             'php' => '5.5.0-7.99.99',
             'typo3' => '7.6.0-8.99.99',
-            'div2007' => '1.9.0-0.0.0',
+            'div2007' => '1.10.4-0.0.0',
         ),
         'conflicts' => array(
         ),
